# STM32

./: .clang-format  CMakeLists.txt  Makefile  README.md  arm-none-eabi.cmake  plan.org
inc/: dma.h  gpio.h  i2c.h  log.h  lsm303dlhc.h  typedefs.h  usart.h
scripts/: cpp_file_style.sh  pre-commit-hook.sh
src/: CMakeLists.txt  dma.c  gpio.c  i2c.c  log.c  lsm303dlhc.c  main.c  system_stm32f3xx.c  usart.c
